# MealPrepper

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/skills/communications-agent/: SKILL.md
config/: blw.yaml  default.yaml  family.yaml  food_groups.yaml  food_shelf_life.yaml  meal_catalog.yaml  pantry.yaml  recipe_sources.yaml
data/: .gitkeep  grocery-2026-06-01—2026-06-07.md
data/logs/: generate-grocery.err  send-daily.err  watch-messages.err
docs/: SLACK_BOT.md
migrations/: 001_multi_family.sql  002_macro_tracking.sql  003_slack_workspace_tenant.sql  004_slack_workspace_pending.sql  005_family_slack_users.sql
scripts/: com.mealprepper.plan-week.plist.example  install_launchd.sh  install_scheduler.sh  install_systemd.sh  setup.sh  trello_to_recipe_sources.py
scripts/cron/: run_scheduled.sh
src/mealprepper/: __init__.py  __main__.py  cli.py  config.py
tests/: test_bot_commands.py  test_comms_backends.py  test_context_budget.py  test_cook_efficiency.py  test_dish_history.py  test_family_admin.py  test_family_context.py  test_family_settings_writes.py  test_food_groups.py  test_food_shelf_life.py  test_grocery_builder.py  test_grocery_store.py  test_ingredient_cohesion.py  test_ingredient_synergy.py  test_meal_index.py  test_meal_planning.py  test_models.py  test_playbook_renderer.py  test_profile_onboarding.py  test_prompt_builder.py  test_recipe_matching.py  test_recipe_repository.py  test_slack_bot.py  test_slack_bot_token.py  test_slack_format.py  test_slack_oauth.py  test_slack_workspace_onboarding.py  test_slack_workspace_resolver.py
(+90 files in other folders)
